Assets/TencentIMSDK/Native/NativeSDK.cs


    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSearchLocalMessages(IntPtr json_search_message_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSearchCloudMessages(IntPtr json_search_message_param, CommonValueCallback cb, IntPtr user_data);
  
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetLocalCustomData(IntPtr json_msg_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSendMessageReadReceipts(IntPtr json_msg_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetMessageExtensions(IntPtr json_msg, IntPtr json_extension_array, CommonValueCallback cb, IntPtr user_data);
  
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetMessageExtensions(IntPtr json_msg, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgDeleteMessageExtensions(IntPtr json_msg, IntPtr json_extension_key_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgAddMessageReaction(IntPtr json_msg, IntPtr reaction_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgRemoveMessageReaction(IntPtr json_msg, IntPtr reaction_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetMessageReactions(IntPtr json_msg_array, int max_user_count_per_reaction,CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetAllUserListOfMessageReaction(IntPtr json_msg, IntPtr reaction_id, ulong next_seq, int count,CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgConvertVoiceToText(IntPtr url, IntPtr language, CommonValueCallback cb, IntPtr user_data);
    
    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgTranslateText(IntPtr json_source_text_array, IntPtr source_language, IntPtr target_language, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetMessageReadReceipts(IntPtr json_msg_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetGroupMessageReadMemberList(IntPtr json_msg, TIMGroupMessageReadMembersFilter filter, ulong next_seq, int count, TIMMsgGroupMessageReadMemberListCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMPinGroupMessage(IntPtr group_id, IntPtr json_msg, bool is_pinned, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetPinnedGroupMessageList(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);



    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupCreate(IntPtr json_group_create_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupDelete(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupJoin(IntPtr group_id, IntPtr hello_message, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupQuit(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupInviteMember(IntPtr json_group_invite_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupDeleteMember(IntPtr json_group_delete_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetJoinedGroupList(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetGroupInfoList(IntPtr group_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]

    public static extern int TIMGroupModifyGroupInfo(IntPtr json_group_modifyinfo_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetMemberInfoList(IntPtr json_group_getmeminfos_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupMarkGroupMemberList(IntPtr group_id, IntPtr member_array, int mark_type, bool enable_mark, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupModifyMemberInfo(IntPtr json_group_modifymeminfo_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetPendencyList(IntPtr json_group_getpendence_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupReportPendencyReaded(long time_stamp, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupHandlePendency(IntPtr json_group_handle_pendency_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetOnlineMemberCount(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupSetGroupCounters(IntPtr group_id, IntPtr json_group_counter_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetGroupCounters(IntPtr group_id, IntPtr json_group_counter_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupIncreaseGroupCounter(IntPtr group_id, IntPtr group_counter_key, ulong group_counter_value, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupDecreaseGroupCounter(IntPtr group_id, IntPtr group_counter_key, ulong group_counter_value, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupSearchGroups(IntPtr json_group_search_groups_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupSearchGroupMembers(IntPtr json_group_search_group_members_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupInitGroupAttributes(IntPtr group_id, IntPtr json_group_atrributes, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupSetGroupAttributes(IntPtr group_id, IntPtr json_group_atrributes, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupDeleteGroupAttributes(IntPtr group_id, IntPtr json_keys, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetGroupAttributes(IntPtr group_id, IntPtr json_keys, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetJoinedCommunityList(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupCreateTopicInCommunity(IntPtr group_id, IntPtr json_topic_info, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupDeleteTopicFromCommunity(IntPtr group_id, IntPtr json_topic_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupSetTopicInfo(IntPtr json_topic_info, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGroupGetTopicInfoList(IntPtr group_id, IntPtr json_topic_id_array, CommonValueCallback cb, IntPtr user_data);



    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetUserStatus(IntPtr json_identifier_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetSelfStatus(IntPtr json_current_user_status, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSubscribeUserStatus(IntPtr json_identifier_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMUnsubscribeUserStatus(IntPtr json_identifier_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMProfileGetUserProfileList(IntPtr json_get_user_profile_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMProfileModifySelfUserProfile(IntPtr json_modify_self_user_profile_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSubscribeUserInfo(IntPtr json_user_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMUnsubscribeUserInfo(IntPtr json_user_id_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMFriendshipGetFriendProfileList(CommonValueCallback cb, IntPtr user_data);
